--- a/references.bib
+++ b/references.bib
@@ -14,3 +14,35 @@ Application},
 	date = {2021},
 	url = {https://CRAN.R-project.org/package=Factoshiny}
 }
+
+@article{denis2021,
+	title = {Applied Univariate, Bivariate, and Multivariate Statistics},
+	author = {Denis, Daniel J.},
+	year = {2021},
+	month = {03},
+	date = {2021-03-05},
+	doi = {10.1002/9781119583004},
+	url = {http://dx.doi.org/10.1002/9781119583004}
+}
+
+@article{denis2020,
+	title = {Univariate, Bivariate, and Multivariate Statistics Using R},
+	author = {Denis, Daniel J.},
+	year = {2020},
+	month = {03},
+	date = {2020-03-27},
+	doi = {10.1002/9781119549963},
+	url = {http://dx.doi.org/10.1002/9781119549963}
+}
+
+@article{johnson2007,
+	title = {Multivariate Analysis},
+	author = {Johnson, Richard A. and Wichern, Dean W.},
+	year = {2007},
+	month = {12},
+	date = {2007-12-14},
+	journal = {Encyclopedia of Statistics in Quality and Reliability},
+	doi = {10.1002/9780470061572.eqr239},
+	url = {http://dx.doi.org/10.1002/9780470061572.eqr239}
+}
+
