--- a/Cours-CAH.qmd
+++ b/Cours-CAH.qmd
@@ -40,7 +40,7 @@ Considérons à titre de premier exemple la consommation moyenne d'alcool (mesur
 
 
 ```{r}
-don<-readRDS("fao/exemple1.RDS")[,c(1,2)]
+don<-readRDS("fao/exemple1.RDS")[,c(1,3)]
 rownames(don)<-1:9
 kbl(don,caption = "Exemple 1 : variable unique ", row.names = T)
 
@@ -222,7 +222,7 @@ Examinons maintenant le cas d'une espace à deux dimensions en reprenant l'exemp
 
 ```{r}
 don <- readRDS("fao/exemple1.RDS")
-tab<-don[,c(1,3,2)]
+tab<-don
 row.names(tab)<-1:9
 kbl(tab, caption = "Consommation moyenne de lait et d'alcool en Europe et en Afrique en 2020 (en kCal/pers/jour)",row.names = T)
 ```
