--- a/references.bib
+++ b/references.bib
@@ -7,13 +7,22 @@
 }
 
 @article{Factoshiny,
-	title = {Factoshiny: Perform Factorial Analysis from 'FactoMineR' with a Shiny
-Application},
+	title = {Factoshiny: Perform Factorial Analysis from 'FactoMineR' with a Shiny Application},
 	author = {Vaissie, Pauline and Monge, Astrid and Husson, Francois},
 	year = {2021},
 	date = {2021},
 	url = {https://CRAN.R-project.org/package=Factoshiny}
 }
+
+@article{Factominer,
+  title={FactoMineR: an R package for multivariate analysis},
+  author={L{\^e}, S{\'e}bastien and Josse, Julie and Husson, Fran{\c{c}}ois},
+  journal={Journal of statistical software},
+  volume={25},
+  pages={1--18},
+  year={2008}
+}
+
 
 @article{denis2021,
 	title = {Applied Univariate, Bivariate, and Multivariate Statistics},
@@ -44,5 +53,48 @@ Application},
 	journal = {Encyclopedia of Statistics in Quality and Reliability},
 	doi = {10.1002/9780470061572.eqr239},
 	url = {http://dx.doi.org/10.1002/9780470061572.eqr239}
+}
+
+@book{husson2018r,
+  title={R pour la statistique et la science des donn{\'e}es},
+  author={Husson, Fran{\c{c}}ois and Cornillon, Pierre-Andr{\'e} and Guyader, Arnaud and J{\'e}gou, Nicolas and Josse, Julie and Klutchnikoff, Nicolas and Le Pennec, Erwan and Matzner-L{\o}ber, Eric and Rouvi{\`e}re, Laurent and Thieurmel, Beno{\^\i}t},
+  year={2018},
+  publisher={Presses universitaires de Rennes}
+}
+
+@book{husson2016analyse,
+  title={Analyse de donn{\'e}es avec R},
+  author={Husson, Fran{\c{c}}ois and L{\^e}, S{\'e}bastien and Pag{\`e}s, J{\'e}r{\^o}me},
+  year={2016},
+  publisher={Presses universitaires de Rennes}
+}
+
+@book{dumolard2011donnees,
+  title={Donn{\'e}es g{\'e}ographiques: analyse statistique multivari{\'e}e},
+  author={Dumolard, Pierre},
+  year={2011},
+  publisher={Lavoisier}
+}
+
+@book{Etoudji2015,
+  title={De la théorie des enquêtes au traitement des données : Initiation aux logiciels statistiques},
+  author={Etoudji, Albert},
+  year={2015},
+  publisher={Université de Lomé}
+}
+
+@book{lebart1995statistique,
+  title={Statistique exploratoire multidimensionnelle},
+  author={Lebart, Ludovic and Morineau, Alain and Piron, Marie},
+  volume={3},
+  year={1995},
+  publisher={Dunod Paris}
+}
+
+@book{sanders1989,
+  title={L'analyse des données appliquée à la géographie},
+  author={Sanders, Léna},
+  year={1989},
+  publisher={Reclus, Montpellier}
 }
 
