--- a/EXP3-Cours3-CAH.qmd
+++ b/EXP3-Cours3-CAH.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Cours 3 : Principes de la classification (ex. des k-means et de la CAH)"
+title: "Cours 3 : Principes de la classification"
 author: "Claude Grasland"
 format: html
 embed-resources: true
@@ -34,7 +34,7 @@ Les objectifs de ce cours sont :
 La classification consiste d'une manière générale à regrouper dans une même classe des individus qui se ressemblent et à séparer dans des classes différentes ceux qui sont différents. Ce problème très général est au coeur même de toute démarche scientifique et il soulève des questions épistémologiques et philosophiques fondamentales qui dépassent le cadre de cet enseignement. Nous nous limiterons ici à poser le problème de la classification dans le cadre de procédures statistiques appliquées à des variables de type quantitatif continu. Nous montrerons que le problème posé est alors celui de la recherche d'une **classification non supervisée** c'est-à-dire la découverte de ressemblances entre des individus en fonction de critères objectivement reproductibles.
 
 
-## UNE DIMENSION
+## Une dimension
 
 Considérons à titre de premier exemple la consommation moyenne d'alcool (mesurée en kCal/pers/j) de 9 régions d'Europe et d'Afrique
 
@@ -216,7 +216,7 @@ kbl(don)
 
 La solution trouvée par l'algorithme consiste à séparer la région d'Afrique Australe de l'Europe pour en faire une classe à elle toute seule. Puis à diviser les 4 régions d'Afrique en deux paires. 
 
-## DEUX DIMENSIONS
+## Deux dimensions
 
 Examinons maintenant le cas d'une espace à deux dimensions en reprenant l'exemple utilisé dans l'introduction à l'ACP : 
 
@@ -386,7 +386,7 @@ cah<-HCPC(acp,nb.clust = 2)
 ```
 
 
-## k DIMENSIONS
+## k Dimensions
 
 Nous nous plaçons finalement das le cas général d'un tableau de dimension quelconque où $n$ individus $1...i...n$ sont décrits par $k$ variables $1...j..k$. Nous prenons à titre d'exemple le tableau des régimes alimentaires de 9 régions d'Europe et d'Afrique décrits par 6 variables mesurant les apports alimentaires en kCal/pers/jour (source : FAO, 2020).
 
