--- a/EXP3-Exo2-AFC.qmd
+++ b/EXP3-Exo2-AFC.qmd
@@ -1,9 +1,8 @@
 ---
-title: "Exo 2 : Distribution des langues au Bénin en 2013 (AFC-CAH)"
+title: "Exo 2 : Distribution des langues au Bénin en 2002 (AFC-CAH)"
 author: "France Guérin-Pace "
 format: html
 embed-resources: true
-bibliography: references.bib
 ---
 
 ```{r, echo=FALSE, message =F, warning=F,error=FALSE}
@@ -16,41 +15,43 @@ library(dplyr,quietly = T,warn.conflicts = T)
 library(FactoMineR)
 ```
 
-## Introduction 
+## Introduction
+
 Le but de cet exercice est :
 
-1. De montrer les commandes R permettant de réaliser une Analayse Factorielle des Correspondances (AFC) sous R
-2. D'apprendre à interpréter les résultats de cette AFC
-3. De compléter l'analyse par une Classification Ascendante Hiérarchique sur les axes de l'AFC. 
+1.  De montrer les commandes R permettant de réaliser une Analayse Factorielle des Correspondances (AFC) sous R
+2.  D'apprendre à interpréter les résultats de cette AFC
+3.  De compléter l'analyse par une Classification Ascendante Hiérarchique sur les axes de l'AFC.
 
-En préalable à cet exercice il est indispensable d'avoir bien maîtrisé les fondements théoriques des deux méthodes d'AFC et de CAH en métrique du chi-2. Ces enseignements n'étant pas détaillé sur le présent site, nous recommandons de se reporter au MOOC de cours de François Husson en suivant les liens suivants
+En préalable à cet exercice il est indispensable d'avoir bien maîtrisé les fondements théoriques des deux méthodes d'AFC et de CAH en métrique du chi-2. Ces enseignements n'étant pas détaillés sur le présent site, nous recommandons de se reporter au MOOC de cours de François Husson en suivant les liens suivants
 
-- [Cours sur l'AFC](https://husson.github.io/MOOC_AnaDo/AFC.html)
-- [Cours sur la classification](https://husson.github.io/MOOC_AnaDo/classif.html)
+-   [Cours sur l'AFC](https://husson.github.io/MOOC_AnaDo/AFC.html)
+-   [Cours sur la classification](https://husson.github.io/MOOC_AnaDo/classif.html)
 
 ## DONNEES
 
-On charge un tableau décrivant le nombre de personnes parlant une langue ou un groupe de langues en 2002. Les chiffres sont exprimés en milliers et les valeurs arrondies.
+On charge le tableau de données "LAN-BENIN-2002-NIV1.csv" décrivant pour chacun des 12 départements du Bénin le nombre de personnes parlant une langue ou un groupe de langues en 2002. Les chiffres sont exprimés en milliers et les valeurs arrondies.
 
 ```{r tab1, fig.subcap="Source : Amadou Sanni, 2002"}
-don<-read.csv2("LAN-BENIN-2013/LAN-BENIN-2002-NIV1.csv")
-kable(don,caption = "Tableau de données original")
+don<-read.csv2("LAN-BENIN-2002/LAN-BENIN-2002-NIV1.csv")
+#kable(don,caption = "Tableau de données original")
+don
 ```
 
 ### Tableau de contingence (Nij)
 
-On crée un **tableau de contingence forman**t une matrice, c'est-à-dire que l'on ne garde que les variables quantitatives dont on peut effectuer les totaux en ligne et en colonnes.
+A partir du tableau don, on créé un **tableau de contingence** croisant les deux variables qualitatives département (12 modalités) et langues (11 modalités). L'instruction tab\<-as.matrix(don\[,3:11\]) a pour effet de conserver les colonnes 3 à 11 du tableau don et de les mettre dans le tableau tab.
 
 ```{r}
 tab<-as.matrix(don[,3:11])
 row.names(tab)<-don$admin1
-kable(addmargins(tab),caption="Tableau de contingence (Nij)")
+#kable(addmargins(tab),caption="Tableau de contingence (Nij)")
 
 ```
 
 ### Profils en ligne (Nij/Ni.)
 
-On crée un tableau de profils en ligne :
+On crée un tableau de **profils en ligne** (tabrow) qui donne la répartition des langues parlées pour les différents départements. La somme de chaque ligne est égale à 100%
 
 ```{r}
 tabrow<-100*prop.table(tab, margin=1)
@@ -59,7 +60,7 @@ kable(addmargins(tabrow,2), caption = "Profils en ligne (Nij/Ni.) en %", digits=
 
 ### Profils en colonne (Nij/N.j)
 
-On crée un tableau de profils en colonne :
+On crée un tableau de **profils en colonne** (tabcol) qui donne pour chaque langue parlée la répartition au sein de chacun des départements. La somme de chaque colonne est égale à 100%:
 
 ```{r}
 tabcol<-100*prop.table(tab, margin=2)
@@ -68,7 +69,7 @@ kable(addmargins(tabcol,1), caption = "Profils en colonnes (Nij/N.j) en %", digi
 
 ### Profil total (Nij/N..)
 
-On crée un tableau de profils en colonne :
+On crée le tableau tabtot en divisant l'effectif de chaque case par l'effectif total du tableau. La somme de toutes les cases du tableau est égale à 100%.
 
 ```{r}
 tabtot<-100*tab/sum(tab)
@@ -77,7 +78,7 @@ kable(addmargins(tabtot), caption = "Part du total (Nij/N..) en %", digits=1)
 
 ## Analyse bivariée
 
-Le tableau étant un tableau de contingence, on peut effectuer sur celui-ci un test du chi-2.
+Pour mesurer la relation entre les deux variables qualitatives , on effectue un test du chi-2. La p.value obtenue (\< 0.01) indique une forte dépendance entre les deux variables.
 
 ```{r}
 test<-chisq.test(tab)
@@ -86,12 +87,16 @@ test
 
 ### Valeurs théoriques
 
+On calcule les valeurs théoriques attendues si il y avait indépendance entre les deux variables département et langues
+
 ```{r}
 tabest<-as.matrix(test$expected)
 kable(addmargins(tabest), caption = "Valeurs théoriques N*ij = (Nij x N.j) /N..", digits=1)
 ```
 
 ### Résidus absolus
+
+On calcule dans le tableau tabres la différence entre les effectifs attendus (théoriques) et les effectifs observées.
 
 ```{r}
 tabres<-tab-tabest
@@ -100,6 +105,8 @@ kable(addmargins(tabres), caption = "Résidus absolus (Nij - N*ij)", digits=1)
 
 ### Chi2 par cellule
 
+On crée le tableau tabchi2 en élevant au carré la valeur du résidu pour chaque cellule du tableau. Cette valeur correspond au Chi2 par cellule. La somme de toutes les valeurs des cellules donne le Chi2 global.
+
 ```{r}
 tabchi2<-((tab-tabest)**2)/tabest
 kable(addmargins(tabchi2), caption = "Chi_2 = (Nij-N*ij)2 / N*ij", digits=1)
@@ -107,12 +114,12 @@ kable(addmargins(tabchi2), caption = "Chi_2 = (Nij-N*ij)2 / N*ij", digits=1)
 
 ### Contributions au chi2
 
+En divisant la valeur du Chi2 pour chaque cellule par le Chi2 global, on obtient la contribution de chaque cellule au Chi2 global. Plus la contribution d'une cellule est élevée, plus le département et la langue qui correspondent à cette cellule s'éloignent de l'effectif attendu en cas d'indépendance entre les deux variables.
+
 ```{r}
 tabchi2ctr<-100*tabchi2/sum(tabchi2)
 kable(addmargins(tabchi2ctr), caption = "% du chi_2 total du tableau (contribution)", digits=2)
 ```
-
-
 
 ## Analyse Factorielle des Correspondances (AFC)
 
@@ -124,6 +131,8 @@ afc<-CA(tab,graph = F)
 
 ### Valeurs propres
 
+La valeur propre associée à un axe donne la part de variance expliquée par l'axe ou l'information contenue dans le tableau de données, prise en compte par l'axe. Les quatre premiers axes expliquent 91.12% de l'information totale.
+
 ```{r}
 barplot(afc$eig[,2],ylab = "% information", main="Hiérarchie des Facteurs",cex.axis = 0.7)
 kable(afc$eig,
@@ -133,6 +142,8 @@ kable(afc$eig,
 ```
 
 ### Relation des colonnes avec les facteurs
+
+Les instructions suivantes donnent pour les trois premiers axes les coordonnées des langues (coo), la contribution de chaque langue à la formation de l'axe (ctr). La somme des contributions pour un axe est égale à 100. cos2 est la qualité de représentation d'une langue donnée par un axe donnée (la somme des cos2 pour l'ensemble des axes est égale à 1.
 
 ```{r}
 coo_1<-afc$col$coord[,1]
@@ -153,6 +164,8 @@ kable(df,digits = 2,
 
 ### Relation des lignes avec les facteurs
 
+En AFC, les lignes et les colonnes jouent un rôle équivalent. Les sorties pour les départements (lignes du tableau de contingence) s'interprètent de la même manière que pour les colonnes. Chaque axe s'interprète en regardant les contributions les plus élevées des points ligne (dep) et des points colonne (langue) à la formation de l'axe.
+
 ```{r}
 coo_1<-afc$row$coord[,1]
 coo_2<-afc$row$coord[,2]
@@ -170,23 +183,24 @@ kable(df,digits = 2,
       )
 ```
 
-## Classification Ascendante Hiérarchique (CAH)
+## Exercices 
 
-On peut poursuivre l'analyse en réalisant une classificiation des départements ou des langues en fonction de leur ressemblance selon le critère de Ward.
+### Commentaire des axes 1 et 2
 
-### Classification des colonnes
-
-```{r}
-CAH_col<-HCPC(afc,nb.clust = 3,cluster.CA = "columns")
-CAH_col$desc.var
-```
-
-### Classification des lignes
+En vous aidant des tableaux précédents, vous devez commentez le plan factoriel des axes 1 et 2 représenté ci-dessous
 
 ```{r}
-CAH_row<-HCPC(afc,nb.clust = 3,cluster.CA = "rows")
-CAH_row$desc.var
+plot.CA(afc)
+```
+- **Commentaire : ** ...
 
+
+### Commentaire des axes 1 et 3
+
+Que pensez-vous des informations supplémentaires approtées par l'axe 3 ?
+
+```{r, warning=F}
+plot.CA(afc,axes = c(1,3))
 ```
 
-
+- **Commentaire : ** ...
